--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,32 +1,53 @@
-.mtop5 {
-    margin-top: 50pt!important;
+*{box-sizing:border-box;}
+
+form{
+	width:300px;
+	padding:16px;
+	border-radius:10px;
+	margin:auto;
+	background-color:#ccc;
 }
-.mtop3 {
-    margin-top: 30pt;
+
+form label{
+	width:72px;
+	font-weight:bold;
+	display:inline-block;
 }
-.mtop1 {
-    margin-top: 10pt;
+
+form input[type="text"],
+form input[type="email"]{
+	width:180px;
+	padding:3px 10px;
+	border:1px solid #f6f6f6;
+	border-radius:3px;
+	background-color:#f6f6f6;
+	margin:8px 0;
+	display:inline-block;
 }
-.card-muertes {
-    background-color:#333;
-    color:white;
-    width: 100%;
+
+form input[type="submit"]{
+	width:100%;
+	padding:8px 16px;
+	margin-top:32px;
+	border:1px solid #000;
+	border-radius:5px;
+	display:block;
+	color:#fff;
+	background-color:#000;
+} 
+
+form input[type="submit"]:hover{
+	cursor:pointer;
 }
-.card-confirmados {
-    background-color:rgb(155, 75, 75);
-    color:white;
-    width: 100%;
-}
-.card-recuperados {
-    width: 100%;
-    background-color:rgb(48, 131, 45); 
-    color:white
-}
-.card-hospitalizados {
-    width: 100%;
-    background-color:rgb(161, 124, 0);
-    color:white
-}
-.card h6 {
-    color:ghostwhite;
+
+textarea{
+	width:100%;
+	height:100px;
+	border:1px solid #f6f6f6;
+	border-radius:3px;
+	background-color:#f6f6f6;			
+	margin:8px 0;
+	/*resize: vertical | horizontal | none | both*/
+	resize:none;
+	display:block;
 }
