--- a/templates/formulario.html
+++ b/templates/formulario.html
@@ -1,210 +1,202 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- CSS only -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-        <title>DSS 2022</title>
-    
-        <script type='text/javascript' 
-        src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-        <script type="text/javascript">
-        $(document).ready(function() {
-         $("#mostrar2").fadeOut();
-         $("#mostrar").fadeIn();            
+    <title>DSS 2022</title>
 
-        });
-
-        $(document).ready(function() {
-         $("#mostrar").click(function(event) {
-            if (id_torneo = null) {
-                
-            } else {
-                // $("#mostrar").fadeOut();
-                // $("#mostrar2").fadeIn();            
-            }
-         });
-        });
-        </script>
 
 </head>
-    <body>
-        <div class="container-fluid p-5 bg-info text-white text-center">
-                <img src="static/fotoCredito.jpg" class="img-responsive" style="width:1200px !important; height:350px !important; border-radius: 15px;" alt="">
-        </div>
-        <h1 style="text-align: center; color: black; position: center;">Simulador de riesgo crediticio</h1>
-        <form method="POST" action="{{url_for('procesar')}} " name= "myform">
-            <!-- <div class="row g-3 align-items-center"> -->
-            <div class="container p-5 my-7 border">
-                <div class="col-auto">
-                    <label for="">Nombre</label>
-                    <input name="nombreTorneo" id="nombre" required type="text" placeholder="Nombre">
+<body>
+    <div class="container-fluid p-5 bg-info text-white text-center">
+        <img src="./static/fotoCredito.png" class="img-responsive" style="width:1200px !important; height:350px !important; border-radius: 15px;" alt="">
+    </div>
+    <h1 style="text-align: center; color: black; position: center;">Simulador de riesgo crediticio</h1>
+    <div>
+
+        <form method="POST" action="{{url_for('procesar')}}" class="text-center" style="padding: 10px">
+            <div class="row">
+                <div class="col-md-4 mb-3">
+                    <label class="form-label">Nombre</label>
+                    <input name="nombre" class="form-control" id="nombre" required type="text" autofocus placeholder="Nombre">
                 </div>
-                <div class="col-auto">
-                    <label for="">Edad</label>
-                    <input name="edad" id="edad" required type="text" placeholder="Edad">
+                <div class="col-md-4 mb-3">
+                    <label class="form-label"> Edad</label>
+                    <input name="edad" id="edad" class="form-control" min="18" max="100" required type="number" autofocus placeholder="Edad">
                 </div>
-                <div class="col-auto">
-                    <label for="">Ingreso Anual en USD</label>
-                    <input name="ingreso" id="ingreso" required type="text" placeholder="Ingreso">
+                <div class="col-md-4 mb-3">
+                    <label class="form-label">Ingreso Anual en USD</label>
+                    <input name="ingresoAnual" id="ingreso" class="form-control" min="0" required type="number" autofocus placeholder="Ingreso">
                 </div>
-                <div class="col-auto">
-                    <label for="">Indica si es propietario, propietario con hipoteca o alquila</label>
-                    <input name="indicacion" id="indicacion" required type="text" placeholder="Indicacion">
+                <div class="col-md-4 mb-3">
+                    <label class="form-label">Indica si es propietario, propietario con hipoteca o alquila</label>
+                    <select name="situacion" class="form-control" autofocus>
+                        <option>Elije una opcion</option>
+                        <option value="0">Renta</option>
+                        <option value="1">hipoteca</option>
+                        <option value="2">Propietario</option>
+                        <option value="3">Otro</option>
+                    </select>
                 </div>
-                <div class="col-auto">
-                    <label for="">Años de antigüedad en el empleo actual</label>
-                    <input name="antiguedad" id="antiguedad" required type="text" placeholder="Antiguedad">
+                <div class="col-md-4 mb-3">
+                    <label class="form-label">Años de antigüedad en el empleo actual</label>
+                    <input name="antiguedadEmpleoActual" id="antiguedad" class="form-control" min="0" max="50" required type="number" placeholder="Antiguedad">
                 </div>
-                <div class="col-auto">
-                    <label for="">Objetivo del préstamo</label>
-                    <input name="objetivo" id="objetivo" required type="text" placeholder="Objetivo">
+                <div class="col-md-4 mb-3">
+                    <label class="form-label">Objetivo del préstamo</label>
+                    <select name="objetivoPrestamo" class="form-control" class="form-control">
+                        <option value="null">Elije una opcion</option>
+                        <option value="0">Educacion</option>
+                        <option value="1">Medico</option>
+                        <option value="2">Empresa</option>
+                        <option value="3">Personal</option>
+                        <option value="4"> Consolidar Deuda</option>
+                        <option value="5">Mejoras en el Hogar</option>
+                    </select>
                 </div>
-                <div class="col-auto">
-                    <label for="">Grado del préstamo</label>
-                    <input name="grado" id="grado" required type="text" placeholder="Grado">
-                </div>
-                <div class="col-auto">
-                    <label for="">Monto del préstamo</label>
-                    <input name="monto" id="monto" required type="text" placeholder="Monto">
-                </div>
-                <div class="col-auto">
-                    <label for="">Tasa de interés</label>
-                    <input name="tasa" id="tasa" required type="text" placeholder="Tasa">
-                </div>
-                <div class="col-auto">
-                    <label for="">Estado del préstamo (0 es ok, 1 es en mora)</label>
-                    <input name="estado" id="estado" required type="text" placeholder="...">
-                </div>
-                <div class="col-auto">
-                    <label for="">Porcentaje que representa el préstamo con respecto al ingreso anual</label>
-                    <input name="objetivo" id="objetivo" required type="text" placeholder="Objetivo">
-                </div>
-                <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" name= "lista[]" value="mora" placeholder="Indica si la persona ha estado en mora anteriormente" checked>
-                    <label for="EVENTOEXTERNO"> Indica si la persona ha estado en mora anteriormente</label>
-                </div>
-                <div class="col-auto">
-                    <label for="">Años de historial crediticio</label>
-                    <input name="objetivo" id="objetivo" required type="text" placeholder="Años">
+                <div class="col-md-4 mb-3">
+                    <label class="form-label">Grado del préstamo</label>
+                    <select name="gradoPrestamo" class="form-control" class="form-control">
+                        <option value="null">Elije una opcion</option>
+                        <option value="0">A</option>
+                        <option value="1">B</option>
+                        <option value="2">C</option>
+                        <option value="3">D</option>
+                        <option value="4">E</option>
+                        <option value="5">F</option>
+                        <option value="6">G</option>
+                    </select>
                 </div>
 
-                <div class="col-auto">
-                    <button type="button-ce" id="mostrar" value="1 Click" class="btn btn-success">Simular</button>
+                <div class="col-md-3 mb-3">
+                    <label class="form-label"> Monto del préstamo </label>
+                    <input name="montoPrestamo" id="monto" class="form-control" min="0" pattern="^[0-9]+"required type="number" placeholder="Monto">
                 </div>
-                
-                <button class="btn btn-primary text-nowrap" type="button" id="mostrar2" value="1 Click">
-                    <span class="spinner-border spinner-border-sm mr-2"></span>
-                    Enviando datos...
-                </button>
+                <div class="col-md-3 mb-3">
+                    <label class="form-label">Tasa de interés</label>
+                    <input name="tasaInteres" id="tasa" class="form-control"  required  placeholder="Tasa">
+                </div>
+                <div class="col-md-3 mb-3">
+                    <label class="form-label">Porcentaje por ingreso anual</label>
+                    <input name="ingresoSobreSueldo" id="objetivo" class="form-control" min="0" required  placeholder="Porcentaje de ingreso actual">
+                </div>
+                <div class="col-md-3 mb-3">
+                    <label class="form-label">Años de historial crediticio</label>
+                    <input name="AñosHistorialCred" min="0" id="objetivo" class="form-control" pattern="^[0-9]+"required type="number" placeholder="Años">
+                </div>
+                <div class="col-md-4 mb-3">
+                    <label class="form-label">En mora</label>
+                    <select name="mora" class="form-control" id="mora2" required class="form-control">
+                        <option value="0">En Mora</option>
+                        <option value="1">Sin Mora</option>
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <button type="button-ce" id="mostrar" value="1 Click" class="btn btn-success">Predecir</button>
+                </div>
             </div>
-            </form>
-        </body>
-    <div class="container p-5 my-5 border">
-        <button type="button-center" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
-            Creadores
-        </button>
-        <button type="button-center" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalEnunciado">
-            Objetivos de Simulacion
-        </button>
-    </div>
+        </form>
+        <div>
+</body>
+<div class="container p-5 my-5 border">
+    <button type="button-center" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
+        Creadores
+    </button>
+    <button type="button-center" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalEnunciado">
+        Objetivos de Simulacion
+    </button>
+</div>
 
-    <div class="container-fluid p-12 bg-info text-white text-center">
-        <h >
-            - UNPSJB Sistemas de Soporte para la toma de decisiones - Todos los derechos reservados - 
-        </h>
-    </div>
-    
+<div class="container-fluid p-12 bg-info text-white text-center">
+    <h>
+        - UNPSJB Sistemas de Soporte para la toma de decisiones - Todos los derechos reservados -
+    </h>
+</div>
+
 
 <!-- The Modal -->
 <div class="modal" id="myModal">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-  
-        <!-- Modal Header -->
-        <div class="modal-header">
-          <h4 class="modal-title">Creadores</h4>
-          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-        </div>
-  
-        <!-- Modal body -->
-        <div class="modal-body">
-            Alumnos: 
-            <br>    - Conti Martin
-            <br>    - López Fernando
-            <br>    - Torres Nelson Jonathan 
-            <br>    - Veronica Paz
 
-            <br><br>
-            Docentes:
-            <br>    - Lic. Claudia López de Munaín 
-            <br>    - Lic. Maximiliano Tosca
-            
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h4 class="modal-title">Creadores</h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+
+            <!-- Modal body -->
+            <div class="modal-body">
+                Alumnos:
+                <br>    - Conti, Martin
+                <br>    - López, Fernando
+                <br>    - Paz, Veronica 
+                <br>    - Torres, Nelson Jonathan
+
+                <br><br>
+                Docentes:
+                <br>    - Lic. Claudia López de Munaín
+                <br>    - Lic. Maximiliano Tosca
+
+            </div>
+
+            <!-- Modal footer -->
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
+            </div>
+
         </div>
-  
-        <!-- Modal footer -->
-        <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
-        </div>
-  
-      </div>
     </div>
-  </div>
+</div>
 
 
-  <!-- The Modal -->
+<!-- The Modal -->
 <div class="modal" id="modalEnunciado">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-  
-        <!-- Modal Header -->
-        <div class="modal-header">
-          <h4 class="modal-title">Objetivo de Simulacion</h4>
-          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h4 class="modal-title">Objetivo de Simulacion</h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+
+            <!-- Modal body -->
+            <div class="modal-body">
+                Objetivo general:
+                <br> - Desarrollar el modelo.
+                Evaluar el riesgo crediticio de un cliente.
+
+                <br><br>
+                Objetivo específico:
+                <br> - Evaluar los posibles modelos.
+                       Encontrar el mejor modelo que sea posible para predecir el riesgo.
+                       Encontrar patrones, encontrar los grises entre los datos, para obtener un modelo rico en datos que sirva de ayuda a la toma de decisiones.
+                       Desarrollar una app que permite mediante el ingreso por un formulario, obtener una respuesta válida por sí o por no, en cuanto a si un cliente es factible de recibir un préstamo.
+
+
+            </div>
+
+            <!-- Modal footer -->
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
+            </div>
+
         </div>
-  
-        <!-- Modal body -->
-        <div class="modal-body">
-            Objetivo general: 
-            <br> - ....
-            <br><br>
-            Objetivo específico:
-            <br> - Simular ...
-        </div>
-  
-        <!-- Modal footer -->
-        <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
-        </div>
-  
-      </div>
     </div>
-  </div>
+</div>
 
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
     <script type="text/javascript" src="jquery.js"></script>
-    <script type="text/javascript" src="jquery.serializejson.js"></script>
- 
-var formData = JSON.stringify($("#myForm").serializeArray());
 
-$.ajax({
-    type: "POST",
-    url: "serverUrl",
-    data: formData,
-    success: function(){},
-    dataType: "json",
-    contentType : "application/json"
-    });
-var obj = $('form').serializeJSON();
-var jsonString = JSON.stringify(obj);
-</script>
 </html>
-
